--- a/src/thornton/IndependentStudy/view/mainWindow.fxml
+++ b/src/thornton/IndependentStudy/view/mainWindow.fxml
@@ -5,21 +5,23 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #43464B;" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thornton.IndependentStudy.view_model.MainWindow">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1010.0" style="-fx-background-color: #43464B; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thornton.IndependentStudy.view_model.MainWindow">
    <children>
-      <Pane layoutX="95.0" layoutY="81.0" prefHeight="218.0" prefWidth="240.0" style="-fx-background-color: #000000;">
+      <Pane layoutX="49.0" layoutY="222.0" prefHeight="344.0" prefWidth="389.0" style="-fx-background-color: #000000; -fx-border-color: #228b22; -fx-border-width: 4;">
          <children>
-            <ImageView id="sourceImage" fx:id="imgView1" fitHeight="150.0" fitWidth="200.0" layoutX="20.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView id="sourceImage" fx:id="imgView1" fitHeight="281.0" fitWidth="357.0" layoutX="16.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
-      <Button fx:id="button" layoutX="384.0" layoutY="393.0" mnemonicParsing="false" onAction="#ButtonCLick" text="Button" />
-      <Pane layoutX="490.0" layoutY="81.0" prefHeight="218.0" prefWidth="240.0" style="-fx-background-color: #000000;">
+      <Button fx:id="button" layoutX="405.0" layoutY="672.0" mnemonicParsing="false" onAction="#ButtonCLick" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: #228b22; -fx-border-color: #39ff14; -fx-border-width: 3; -fx-text-fill: #39ff14;" text="View Lot " />
+      <Pane layoutX="556.0" layoutY="222.0" prefHeight="344.0" prefWidth="389.0" style="-fx-background-color: #000000; -fx-border-color: #228b22; -fx-border-width: 4;">
          <children>
-            <ImageView id="sourceImage" fx:id="imgView2" fitHeight="150.0" fitWidth="200.0" layoutX="20.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView id="sourceImage" fx:id="imgView2" fitHeight="281.0" fitWidth="357.0" layoutX="16.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </Pane>
-      <TextArea fx:id="OpenSpotsText" layoutX="310.0" layoutY="351.0" prefHeight="42.0" prefWidth="200.0" />
+      <TextArea fx:id="OpenSpotsText" layoutX="405.0" layoutY="630.0" prefHeight="42.0" prefWidth="200.0" />
+      <Text fill="#39ff14" layoutX="285.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 70; -fx-font-family: Serif;" text="Choose A Lot" wrappingWidth="440.7109375" />
       
    </children>
 </AnchorPane>
