--- a/bin/thornton/IndependentStudy/view/mainWindow.fxml
+++ b/bin/thornton/IndependentStudy/view/mainWindow.fxml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1010.0" style="-fx-background-color: #43464B; -fx-border-color: #000000; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="thornton.IndependentStudy.view_model.MainWindow">
    <children>
       <Pane layoutX="49.0" layoutY="222.0" prefHeight="344.0" prefWidth="389.0" style="-fx-background-color: #000000; -fx-border-color: #228b22; -fx-border-width: 4;">
          <children>
-            <ImageView id="sourceImage" fx:id="imgView1" fitHeight="281.0" fitWidth="357.0" layoutX="16.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView id="sourceImage" fx:id="imgView1" fitHeight="269.0" fitWidth="357.0" layoutX="16.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
+            <Text fill="#fffefe" layoutX="142.0" layoutY="326.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Original" wrappingWidth="105.55101013183594">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
-      <Button fx:id="button" layoutX="405.0" layoutY="672.0" mnemonicParsing="false" onAction="#ButtonCLick" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: #228b22; -fx-border-color: #39ff14; -fx-border-width: 3; -fx-text-fill: #39ff14;" text="View Lot " />
+      <Button fx:id="button" layoutX="405.0" layoutY="672.0" mnemonicParsing="false" onAction="#ButtonCLick" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: #228b22; -fx-border-color: #39ff14; -fx-border-width: 3; -fx-text-fill: #39ff14;" styleClass="executeBtn" stylesheets="@../../../../../chooseAlotMain.css" text="View Lot " />
       <Pane layoutX="556.0" layoutY="222.0" prefHeight="344.0" prefWidth="389.0" style="-fx-background-color: #000000; -fx-border-color: #228b22; -fx-border-width: 4;">
          <children>
             <ImageView id="sourceImage" fx:id="imgView2" fitHeight="281.0" fitWidth="357.0" layoutX="16.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
+            <Text fill="WHITE" layoutX="84.0" layoutY="325.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Computer Vision">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Text>
          </children>
       </Pane>
       <TextArea fx:id="OpenSpotsText" layoutX="405.0" layoutY="630.0" prefHeight="42.0" prefWidth="200.0" />
       <Text fill="#39ff14" layoutX="285.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 70; -fx-font-family: Serif;" text="Choose A Lot" wrappingWidth="440.7109375" />
+      <ComboBox fx:id="lotComboBox" layoutX="796.0" layoutY="110.0" prefWidth="150.0" promptText="Select Parking Lot" style="-fx-background-color: #FFFFFF;" />
       
    </children>
 </AnchorPane>
