--- a/src/thornton/IndependentStudy/view/mainWindow.fxml
+++ b/src/thornton/IndependentStudy/view/mainWindow.fxml
@@ -21,7 +21,7 @@
             </Text>
          </children>
       </Pane>
-      <Button fx:id="button" layoutX="405.0" layoutY="672.0" mnemonicParsing="false" onAction="#ButtonCLick" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: #228b22; -fx-border-color: #39ff14; -fx-border-width: 3; -fx-text-fill: #39ff14;" stylesheets="@../../../../../ChooseALotMain.css" text="View Lot " />
+      <Button fx:id="button" layoutX="405.0" layoutY="672.0" mnemonicParsing="false" onAction="#ButtonCLick" prefHeight="52.0" prefWidth="200.0" style="-fx-background-color: #228b22; -fx-border-color: #39ff14; -fx-border-width: 3; -fx-text-fill: #39ff14;" text="View Lot " />
       <Pane layoutX="556.0" layoutY="222.0" prefHeight="344.0" prefWidth="389.0" style="-fx-background-color: #000000; -fx-border-color: #228b22; -fx-border-width: 4;">
          <children>
             <ImageView id="sourceImage" fx:id="imgView2" fitHeight="281.0" fitWidth="357.0" layoutX="16.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true" />
@@ -32,7 +32,7 @@
             </Text>
          </children>
       </Pane>
-      <TextArea fx:id="OpenSpotsText" layoutX="405.0" layoutY="630.0" prefHeight="42.0" prefWidth="200.0" />
+      <TextArea fx:id="OpenSpotsText" editable="false" layoutX="405.0" layoutY="630.0" prefHeight="42.0" prefWidth="200.0" />
       <Text fill="#39ff14" layoutX="285.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 70; -fx-font-family: Serif;" text="Choose A Lot" wrappingWidth="440.7109375" />
       <ComboBox fx:id="lotComboBox" layoutX="796.0" layoutY="110.0" prefWidth="150.0" promptText="Select Parking Lot" style="-fx-background-color: #FFFFFF;" />
       
